# K-Means_CUDA

./: CMakeLists.txt  README.md  k-means_cuda.cu
documentation/: K-Means_CUDA_presentazione.pptx
